--- a/dessert.html
+++ b/dessert.html
@@ -13,7 +13,7 @@
 
 <header>
     The most
-    <mark>delicious salad ever!</mark>
+    <mark>delicious desserts ever!</mark>
     <nav>
         <ul>
             <li>
@@ -52,83 +52,148 @@
 </header>
 
 <section>
-    <h2>Salad</h2>
+    <h2>Desserts</h2>
     <hr>
-    <ul class="salad-list-parent">
+    <ul class="dessert-list-parent">
         <li>
-            <img src="assets/img/salad/caesar.jpg" alt="Could not load!">
+            <img src="assets/img/backeries/bisc.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Caesar</div>
+                <div class="item-text">Biscuits</div>
                 <div class="item-ico" title="4 types of cheese..."><i class="fas fa-info-circle fa-2x"></i>
                 </div>
             </div>
             <div class="item-price" data-value="90">
-                <div class="item-text">40 lei</div>
+                <div class="item-text">20 lei</div>
                 <div class="item-ico">
                     <i class="fas fa-cart-arrow-down"></i>
                 </div>
             </div>
         </li>
         <li>
-            <img src="assets/img/salad/chick.jpg" alt="Could not load!">
+            <img src="assets/img/backeries/chcake.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Chicken</div>
+                <div class="item-text">CheesseCake</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">40 lei</div>
+                <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/backeries/cherry.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Cherry-IceCream</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
             <div class="item-price" data-value="80">
                 <div class="item-text">50 lei</div>
-                <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
-            </div>
-        </li>
-        <li>
-            <img src="assets/img/salad/greek.jpg" alt="Could not load!">
-            <div class="content-item">
-                <div class="item-text">Greek</div>
-                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                        class="fas fa-info-circle fa-2x"></i></div>
-            </div>
-            <div class="item-price" data-value="80">
-                <div class="item-text">70 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/salad/hunt.jpg" alt="Could not load!">
+            <img src="assets/img/backeries/cioco.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Hunter</div>
+                <div class="item-text">Chocolate-Ice-Cream</div>
                 <div class="sitem-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
             <div class="item-price" data-value="80">
-                <div class="item-text">75 lei</div>
+                <div class="item-text">35 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/salad/tuna.jpg" alt="Could not load!">
+            <img src="assets/img/backeries/fondant.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Tuna</div>
+                <div class="item-text">Fondant</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
             <div class="item-price" data-value="80">
-                <div class="item-text">80 lei</div>
+                <div class="item-text">50 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
         </li>
         <li>
-            <img src="assets/img/salad/veggy.jpg" alt="Could not load!">
+            <img src="assets/img/backeries/fruit.jpg" alt="Could not load!">
             <div class="content-item">
-                <div class="item-text">Veggy</div>
+                <div class="item-text">FruitSalad</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">55 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/backeries/greek.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Greek-Ice</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">45 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/backeries/nico.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Nico-Choco</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">55 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/backeries/sacher.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Sacher</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">45 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/backeries/tir.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Tiramisu</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
             <div class="item-price" data-value="80">
                 <div class="item-text">35 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/backeries/tropic.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Tropic</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">45 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
