--- a/hamb.html
+++ b/hamb.html
@@ -26,7 +26,7 @@
                         <a href="hamb.html">Hamburgers</a>
                         <a href="sushi.html">Sushi</a>
                         <a href="salad.html">Salads</a>
-                        <a href="xx">Desserts</a>
+                        <a href="dessert.html">Desserts</a>
                         <a href="xx">Soup</a>
                         <a href="xx">Drinks</a>
                         <a href="xx">Hot</a>
@@ -42,7 +42,7 @@
                         <a href="xx">Corporative Party</a>
                         <a href="xx">Birthdays</a>
                         <a href="xx">ClientCard</a>
-                        <a href="xx">Fourchete</a>
+                        <a href="xx">Fourchette</a>
                         <a href="xx">Decorations</a>
                     </div>
                 </div>
@@ -51,181 +51,181 @@
     </nav>
 </header>
 
-    <section id="hamb-item">
-        <h2>Hamburgers</h2>
-        <hr>
-        <ul class="sushi-list-parent">
-            <li>
-                <img src="assets/img/burgers/4ch.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">4Cheeses</div>
-                    <div class="item-ico" title="4 types of cheese..."><i class="fas fa-info-circle fa-2x"></i>
-                    </div>
+<section id="hamb-item">
+    <h2>Hamburgers</h2>
+    <hr>
+    <ul class="sushi-list-parent">
+        <li>
+            <img src="assets/img/burgers/4ch.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">4Cheeses</div>
+                <div class="item-ico" title="4 types of cheese..."><i class="fas fa-info-circle fa-2x"></i>
                 </div>
-                <div class="item-price" data-value="90">
-                    <div class="item-text">50 lei</div>
-                    <div class="item-ico">
-                        <i class="fas fa-cart-arrow-down"></i>
-                    </div>
+            </div>
+            <div class="item-price" data-value="90">
+                <div class="item-text">50 lei</div>
+                <div class="item-ico">
+                    <i class="fas fa-cart-arrow-down"></i>
                 </div>
-            </li>
-            <li>
-                <img src="assets/img/burgers/avocado.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Avocado</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">50 lei</div>
-                    <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/burgers/beef.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Beef</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">60 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/burgers/blue.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Blue</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">75 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/burgers/Cheese.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Cheese</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">65 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/burgers/Crispy.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Crispy</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">55 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/burgers/DoubleCheese.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">DoubleCheese</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">65 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/burgers/Eggbacon.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Eggbacon</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">55 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/burgers/Fish.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Fish</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">75 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/burgers/Green.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Green</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">55 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/burgers/Mario.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Mario</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">55 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/burgers/Mister.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Mister</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">65 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/burgers/Americandog.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">AmericanDog</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">30 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-        </ul>
-    </section>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/burgers/avocado.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Avocado</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">50 lei</div>
+                <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/burgers/beef.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Beef</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">60 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/burgers/blue.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Blue</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">75 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/burgers/Cheese.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Cheese</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">65 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/burgers/Crispy.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Crispy</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">55 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/burgers/DoubleCheese.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">DoubleCheese</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">65 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/burgers/Eggbacon.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Eggbacon</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">55 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/burgers/Fish.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Fish</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">75 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/burgers/Green.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Green</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">55 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/burgers/Mario.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Mario</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">55 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/burgers/Mister.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Mister</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">65 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/burgers/Americandog.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">AmericanDog</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">30 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+    </ul>
+</section>
 
 <footer>
     <ul class="footer-content">
