--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <a href="hamb.html">Hamburgers</a>
                         <a href="sushi.html">Sushi</a>
                         <a href="salad.html">Salads</a>
-                        <a href="xx">Desserts</a>
+                        <a href="dessert.html">Desserts</a>
                         <a href="xx">Soup</a>
                         <a href="xx">Drinks</a>
                         <a href="xx">Hot</a>
@@ -36,7 +36,7 @@
                         <a href="xx">Corporative Party</a>
                         <a href="xx">Birthdays</a>
                         <a href="xx">ClientCard</a>
-                        <a href="xx">Fourchete</a>
+                        <a href="xx">Fourchette</a>
                         <a href="xx">Decorations</a>
                     </div>
                 </div>
