--- a/sushi.html
+++ b/sushi.html
@@ -26,7 +26,7 @@
                         <a href="hamb.html">Hamburgers</a>
                         <a href="sushi.html">Sushi</a>
                         <a href="salad.html">Salads</a>
-                        <a href="xx">Desserts</a>
+                        <a href="dessert.html">Desserts</a>
                         <a href="xx">Soup</a>
                         <a href="xx">Drinks</a>
                         <a href="xx">Hot</a>
@@ -42,7 +42,7 @@
                         <a href="xx">Corporative Party</a>
                         <a href="xx">Birthdays</a>
                         <a href="xx">ClientCard</a>
-                        <a href="xx">Fourchete</a>
+                        <a href="xx">Fourchette</a>
                         <a href="xx">Decorations</a>
                     </div>
                 </div>
@@ -51,116 +51,116 @@
     </nav>
 </header>
 
-    <section id="sushi-item">
-        <h2>Sushi</h2>
-        <hr>
-        <ul class="sushi-list-parent">
-            <li>
-                <img src="assets/img/sushi/california.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">California</div>
-                    <div class="item-ico" title="4 types of cheese..."><i class="fas fa-info-circle fa-2x"></i>
-                    </div>
+<section id="sushi-item">
+    <h2>Sushi</h2>
+    <hr>
+    <ul class="sushi-list-parent">
+        <li>
+            <img src="assets/img/sushi/california.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">California</div>
+                <div class="item-ico" title="4 types of cheese..."><i class="fas fa-info-circle fa-2x"></i>
                 </div>
-                <div class="item-price" data-value="90">
-                    <div class="item-text">120 lei</div>
-                    <div class="item-ico">
-                        <i class="fas fa-cart-arrow-down"></i>
-                    </div>
+            </div>
+            <div class="item-price" data-value="90">
+                <div class="item-text">120 lei</div>
+                <div class="item-ico">
+                    <i class="fas fa-cart-arrow-down"></i>
                 </div>
-            </li>
-            <li>
-                <img src="assets/img/sushi/sake.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Sake</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">150 lei</div>
-                    <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/sushi/double.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Double</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">120 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/sushi/ebi.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Ebi</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">75 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/sushi/gei.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Geisha</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">165 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/sushi/mag.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">MaguroMaki</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">125 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/sushi/phil.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Philadelphia</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">110 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/sushi/vol.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Volcano</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">55 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-        </ul>
-    </section>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/sushi/sake.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Sake</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">150 lei</div>
+                <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/sushi/double.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Double</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">120 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/sushi/ebi.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Ebi</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">75 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/sushi/gei.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Geisha</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">165 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/sushi/mag.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">MaguroMaki</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">125 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/sushi/phil.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Philadelphia</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">110 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/sushi/vol.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Volcano</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">55 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+    </ul>
+</section>
 
 <footer>
     <ul class="footer-content">
