--- a/pizza.html
+++ b/pizza.html
@@ -26,7 +26,7 @@
                         <a href="hamb.html">Hamburgers</a>
                         <a href="sushi.html">Sushi</a>
                         <a href="salad.html">Salads</a>
-                        <a href="xx">Desserts</a>
+                        <a href="dessert.html">Desserts</a>
                         <a href="xx">Soup</a>
                         <a href="xx">Drinks</a>
                         <a href="xx">Hot</a>
@@ -42,7 +42,7 @@
                         <a href="xx">Corporative Party</a>
                         <a href="xx">Birthdays</a>
                         <a href="xx">ClientCard</a>
-                        <a href="xx">Fourchete</a>
+                        <a href="xx">Fourchette</a>
                         <a href="xx">Decorations</a>
                     </div>
                 </div>
@@ -51,142 +51,142 @@
     </nav>
 </header>
 
-    <section id="pizza-item">
-        <h2>Pizza</h2>
-        <hr>
-        <ul class="pizza-list-parent">
-            <li>
-                <img src="assets/img/pizza/barb.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Barbeque</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
+<section id="pizza-item">
+    <h2>Pizza</h2>
+    <hr>
+    <ul class="pizza-list-parent">
+        <li>
+            <img src="assets/img/pizza/barb.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Barbeque</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="90">
+                <div class="item-text">90 lei</div>
+                <div class="item-ico">
+                    <i class="fas fa-cart-arrow-down"></i>
                 </div>
-                <div class="item-price" data-value="90">
-                    <div class="item-text">90 lei</div>
-                    <div class="item-ico">
-                        <i class="fas fa-cart-arrow-down"></i>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/pizza/ch.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">4Cheeses</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price" data-value="80">
-                    <div class="item-text">80 lei</div>
-                    <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/pizza/cap.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Capricioasa</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-1x"></i></div>
-                </div>
-                <div class="item-price">
-                    <div class="item-text">70 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/pizza/diablo.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Diablo</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price">
-                    <div class="item-text">75 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/pizza/fun.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Funghi</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price">
-                    <div class="item-text">65 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/pizza/mar.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Margheritta</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-1x"></i></div>
-                </div>
-                <div class="item-price">
-                    <div class="item-text">90 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/pizza/mario.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Mario</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price">
-                    <div class="item-text">65 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/pizza/nap.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Napolitana</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price">
-                    <div class="item-text">95 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/pizza/ran.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Rancho</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price">
-                    <div class="item-text">79 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-            <li>
-                <img src="assets/img/pizza/pep.jpg" alt="Could not load!">
-                <div class="content-item">
-                    <div class="item-text">Pepperoni</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-info-circle fa-2x"></i></div>
-                </div>
-                <div class="item-price">
-                    <div class="item-text">99 lei</div>
-                    <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
-                            class="fas fa-cart-arrow-down"></i></div>
-                </div>
-            </li>
-        </ul>
-    </section>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/pizza/ch.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">4Cheeses</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price" data-value="80">
+                <div class="item-text">80 lei</div>
+                <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/pizza/cap.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Capricioasa</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-1x"></i></div>
+            </div>
+            <div class="item-price">
+                <div class="item-text">70 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/pizza/diablo.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Diablo</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price">
+                <div class="item-text">75 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/pizza/fun.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Funghi</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price">
+                <div class="item-text">65 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/pizza/mar.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Margheritta</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-1x"></i></div>
+            </div>
+            <div class="item-price">
+                <div class="item-text">90 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/pizza/mario.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Mario</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price">
+                <div class="item-text">65 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/pizza/nap.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Napolitana</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price">
+                <div class="item-text">95 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/pizza/ran.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Rancho</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price">
+                <div class="item-text">79 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+        <li>
+            <img src="assets/img/pizza/pep.jpg" alt="Could not load!">
+            <div class="content-item">
+                <div class="item-text">Pepperoni</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-info-circle fa-2x"></i></div>
+            </div>
+            <div class="item-price">
+                <div class="item-text">99 lei</div>
+                <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
+                        class="fas fa-cart-arrow-down"></i></div>
+            </div>
+        </li>
+    </ul>
+</section>
 
 <footer>
     <ul class="footer-content">
